--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="social.html">Social</a>
         </div>
     </header>
+    <div class="relleno"></div>
     
 </body>
 </html>
