--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <body>
     <header>
         <div class="menu-container">
-            <img src="logo.png" alt="">
+            <a href="index.html"><img src="logo.png" alt=""></a>
             <a href="tienda.html">Tienda</a>
             <a href="juego.html">Juego</a>
             <a href="novedades.html">Novedades</a>
             <a href="social.html">Social</a>
         </div>
     </header>
-    <div class="relleno"></div>
+    <div class="main-container">
+
+    </div>
     
 </body>
 </html>
