--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </header>
     <div class="main-container">
-
+        <img src="background.jpg" alt="">
     </div>
     
 </body>
