background style and part of the second box

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         </div>
     </header>
     <div class="main-container">
-        <img src="background.jpg" alt="">
+        <h1>Regalo de la tienda web: ¡Huevo VIP!</h1>
     </div>
+    
     
 </body>
 </html>
