--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         </div>
     </header>
     <div class="main-container">
-        <h1>Regalo de la tienda web: ¡Huevo VIP!</h1>
+        <div class="first-section">
+            <h1></h1>
+        </div>
     </div>
     
     
