--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
                 <p>Se requiere Dragon City. Se puede canjear una vez por cuenta de Dragon City. Se aplican términos y condiciones.</p>
             </div>
             <div class="body-section">
-                <h3></h3>
+                <div class="card">
+                    <div class="card-image">
+                        <div class="image"></div>
+                        <div class="tag"></div>
+                    </div>
+                    <div class="card-description">
+                        <div class="card-text"></div>
+                        <div class="stock">
+                            <div class="item"></div>
+                        </div>
+                        <div class="card-bottom"></div>
+                    </div>
+                </div>
+
             </div>
         </div>
         
