--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             <div class="body-section">
                 <div class="card">
                     <div class="card-image">
-                        <div class="image"></div>
-                        <div class="tag"></div>
+                        <div class="image">
+                            
+                        </div>
+                        <div class="tag">¡SOLO EN LA WEB!</div>
                     </div>
                     <div class="card-description">
                         <div class="card-text"></div>
