Second part of the card text

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                         <div class="tag">¡SOLO EN LA WEB!</div>
                     </div>
                     <div class="card-description">
-                        <div class="card-text"></div>
+                        <div class="card-text">
+                            <p class="card-tittle">Regalo de la tienda web: ¡Huevo VIP!</p>
+                            <p class="card-stock">EN STOCK: 1</p>
+                        </div>
                         <div class="stock">
                             <div class="item"></div>
                         </div>
