--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/home.css" />
 </head>
 <body>
     <header>
         <div class="menu-container">
-            <a href="index.html"><img src="logo.png" alt=""></a>
+            <a href="index.html"><img src="images/logo.png" alt=""></a>
             <a href="tienda.html">Tienda</a>
             <a href="juego.html">Juego</a>
             <a href="novedades.html">Novedades</a>
@@ -21,11 +22,11 @@
         
         <div class="first-section">
     
-            <div class="header-section">
+            <div class="section-header">
                 <h2>Regalo de la tienda web: ¡Huevo VIP!</h2>
                 <p>Se requiere Dragon City. Se puede canjear una vez por cuenta de Dragon City. Se aplican términos y condiciones.</p>
             </div>
-            <div class="body-section">
+            <div class="section-body">
                 <div class="card">
                     <div class="card-image">
                         <div class="image">
