second section first card changes

--- a/index.html
+++ b/index.html
@@ -58,8 +58,14 @@
                     <div class="card-image">
                         <div class="image"></div>
                     </div>
-                    <div class="card-description">
-                        <div class="card-text"></div>
+                    <div class="card-description">                        
+                        <div class="card-text">
+                            <p class="card-tittle">Solo en la web | Oferta especial</p>    
+                            <span>
+                                <p class="card-timer">4D 13H</p>
+                                <p class="count">EN STOCK: 1</p>
+                            </span>
+                        </div>
                         <div class="stock">
                             <div class="item"></div>
                             <div class="item"></div>
