--- a/index.html
+++ b/index.html
@@ -17,53 +17,58 @@
             <a href="social.html">Social</a>
         </div>
     </header>    
-    <div class="main-container">        
-        <div class="first-section">    
+    <div class="main-container">    
+            
+        <div class="section">    
             <div class="section-header">
                 <h2>Regalo de la tienda web: ¡Huevo VIP!</h2>
                 <p>Se requiere Dragon City. Se puede canjear una vez por cuenta de Dragon City. Se aplican términos y condiciones.</p>
             </div>
             <div class="section-body">
-                <div class="card">
+                <div class="card first-card">
                     <div class="card-image">
-                        <div class="image"></div>
                         <div class="tag">¡SOLO EN LA WEB!</div>
                     </div>
                     <div class="card-description">
                         <div class="card-text">
                             <p class="card-tittle">Regalo de la tienda web: ¡Huevo VIP!</p>
-                            <p class="card-stock">EN STOCK: 1</p>
+                            <span class="card-subtitle">
+                                <p>EN STOCK: 1</p>
+                            </span>
                         </div>
                         <div class="stock">                           
                             <div class="item">
                                 <img src="https://images.ctfassets.net/wn7ipiv9ue5v/161tEVhVWxM1ymkY3ibLPI/6602e1467c05562be7890a90b3e7b8d7/540x540_vip_egg.png?q=75&w=48&fm=avif" alt="">
                                 <p>Huevo VIP</p>
+                                <p>1</p>
                             </div>
-                            <p>1</p>
                         </div>
                         <button class="card-button">RECOGER REGALO</button>
                     </div>
                 </div>
             </div>
         </div>    
-        <div class="second-section">
+
+        <div class="section">
+
             <div class="section-header">
                 <h2>PASE DIVINO</h2>
                 <P>¡Desbloquea recompensas premium con el Pase divino!</P>
                 <P>El Pase divino y el Pase de élite solo permanecerán activos hasta el final de la temporada actual. La temporada actual acaba a las 10:00 CEST, el 11/2/2023.</P>
                 <P>Ten en cuenta que solo podrás comprar un pase en la tienda web: el Pase divino o el Pase de élite. Podrás mejorar tu Pase divino para convertirlo en Pase de élite en el juego.</P>
             </div>
+
             <div class="section-body">
-                <div class="card">
-                    <div class="card-image">
-                        <div class="image"></div>
-                    </div>
+
+
+                <div class="card second-card">
+                    <div class="card-image"></div>
                     <div class="card-description">                        
                         <div class="card-text">
-                            <p class="card-tittle">Solo en la web | Oferta especial</p>    
-                            <span>
-                                <p class="card-timer">4D 13H</p>
-                                <p class="count">EN STOCK: 1</p>
+                            <p class ="card-tittle">Solo en la web | Oferta especial</p>    
+                            <span class="card-subtitle">
+                                <p>4D 13H</p>
+                                <p>EN STOCK: 1</p>
                             </span>
                         </div>
                         <div class="stock">
@@ -74,10 +79,10 @@
                         <button class="card-button"></button>
                     </div>
                 </div>
-                <div class="second-card">
-                    <div class="card-image">
-                        <div class="image"></div>
-                    </div>
+
+
+                <div class="card third-card">
+                    <div class="card-image"></div>
                     <div class="card-description">
                         <div class="card-text"></div>
                         <div class="stock">
@@ -89,10 +94,10 @@
                         <button class="card-button"></button>
                     </div>
                 </div>
-                <div class="third-card">
-                    <div class="card-image">
-                        <div class="image"></div>
-                    </div>
+
+
+                <div class="card fourth-card">
+                    <div class="card-image"></div>
                     <div class="card-description">
                         <div class="card-text"></div>
                         <div class="stock">
@@ -105,6 +110,8 @@
                         <button class="card-button"></button>
                     </div>
                 </div>
+
+
             </div>
     </div>    
 </body>
