Fixed error that fede made

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                         </div>
                         <div class="stock">                           
                             <div class="item">
-                                <img src="https://images.ctfassets.net/wn7ipiv9ue5v/161tEVhVWxM1ymkY3ibLPI/6602e1467c05562be7890a90b3e7b8d7/540x540_vip_egg.png?q=75&w=48&fm=avif" alt="">
-                                <p>Huevo VIP</p>
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/161tEVhVWxM1ymkY3ibLPI/6602e1467c05562be7890a90b3e7b8d7/540x540_vip_egg.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Huevo VIP</p>
+                                </div>
                                 <p>1</p>
                             </div>
                         </div>
@@ -53,9 +55,9 @@
 
             <div class="section-header">
                 <h2>PASE DIVINO</h2>
-                <P>¡Desbloquea recompensas premium con el Pase divino!</P>
-                <P>El Pase divino y el Pase de élite solo permanecerán activos hasta el final de la temporada actual. La temporada actual acaba a las 10:00 CEST, el 11/2/2023.</P>
-                <P>Ten en cuenta que solo podrás comprar un pase en la tienda web: el Pase divino o el Pase de élite. Podrás mejorar tu Pase divino para convertirlo en Pase de élite en el juego.</P>
+                <P>¡Desbloquea recompensas premium con el Pase divino! <br />
+                El Pase divino y el Pase de élite solo permanecerán activos hasta el final de la temporada actual. La temporada actual acaba a las 10:00 CEST, el 11/2/2023.<br />
+                Ten en cuenta que solo podrás comprar un pase en la tienda web: el Pase divino o el Pase de élite. Podrás mejorar tu Pase divino para convertirlo en Pase de élite en el juego.</P>
             </div>
 
             <div class="section-body">
