--- a/index.html
+++ b/index.html
@@ -74,8 +74,16 @@
                             </span>
                         </div>
                         <div class="stock">
-                            <div class="item"></div>
-                            <div class="item"></div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/1TmdIGLkSfsjKBNYTsDMin/87161bf931cf7a095494fa808a76af80/108x108_battle_pass.png?q=75&w=48&fm=avif" alt="">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/5CBiGIbl6OjseW2fhIJFKa/b3974bc60d1632f279af246bf6c8736b/108x108_Elite_pass_plus_webstore_black_fr" alt="">
+                                </div>
+                            </div>
                             <div class="item"></div>
                         </div>
                         <button class="card-button"></button>
@@ -86,7 +94,13 @@
                 <div class="card third-card">
                     <div class="card-image"></div>
                     <div class="card-description">
-                        <div class="card-text"></div>
+                        <div class="card-text">
+                            <p class="card-tittle">Solo en la web | Oferta especial</p>
+                            <span class="card-subtitle">
+                                <p>2D 12H</p>
+                                <p>EN STOCK: 1</p>
+                            </span>
+                        </div>
                         <div class="stock">
                             <div class="item"></div>
                             <div class="item"></div>
@@ -101,7 +115,13 @@
                 <div class="card fourth-card">
                     <div class="card-image"></div>
                     <div class="card-description">
-                        <div class="card-text"></div>
+                        <div class="card-text">
+                            <p class="card-tittle">Solo en la web | Oferta especial</p>
+                            <span class="card-subtitle">
+                                <p>2D 12H</p>
+                                <p>EN STOCK: 1</p>
+                            </span>
+                        </div>
                         <div class="stock">
                             <div class="item"></div>
                             <div class="item"></div>
