Second section changes, finished all second section cards

--- a/index.html
+++ b/index.html
@@ -77,16 +77,26 @@
                             <div class="item">
                                 <div class="item-content">
                                     <img src="https://images.ctfassets.net/wn7ipiv9ue5v/1TmdIGLkSfsjKBNYTsDMin/87161bf931cf7a095494fa808a76af80/108x108_battle_pass.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Pase Divino</p>
                                 </div>
+                                <p>1</p>
                             </div>
                             <div class="item">
                                 <div class="item-content">
-                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/5CBiGIbl6OjseW2fhIJFKa/b3974bc60d1632f279af246bf6c8736b/108x108_Elite_pass_plus_webstore_black_fr" alt="">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/5CBiGIbl6OjseW2fhIJFKa/b3974bc60d1632f279af246bf6c8736b/108x108_Elite_pass_plus_webstore_black_friday_2023.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Distinción oculta</p>
                                 </div>
+                                <p>5</p>
                             </div>
-                            <div class="item"></div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/OB7R9TiHXHOo2unMNw1LT/8e8e580eeb040e3bde2eaad9f8d511a3/108x108_arcana-elite_pass_plus_webstore_360.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Insignia arcana</p>
+                                </div>
+                                <p>5</p>
+                            </div>
                         </div>
-                        <button class="card-button"></button>
+                        <button class="card-button">CONECTAR</button>
                     </div>
                 </div>
 
@@ -102,12 +112,36 @@
                             </span>
                         </div>
                         <div class="stock">
-                            <div class="item"></div>
-                            <div class="item"></div>
-                            <div class="item"></div>
-                            <div class="item"></div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/41aBrm8TTeaR7Emm2Tuo07/cf9b89c6c9fe08fe8698c1069d63a595/108x108_elite_pass.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Pase de élite</p>
+                                </div>
+                                <p>1</p>
+                            </div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/5CBiGIbl6OjseW2fhIJFKa/b3974bc60d1632f279af246bf6c8736b/108x108_Elite_pass_plus_webstore_black_friday_2023.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Distinción oculta</p>
+                                </div>
+                                <p>20</p>
+                            </div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/OB7R9TiHXHOo2unMNw1LT/8e8e580eeb040e3bde2eaad9f8d511a3/108x108_arcana-elite_pass_plus_webstore_360.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Insignia arcana</p>
+                                </div>
+                                <p>10</p>
+                            </div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/BDRCnHNl9krEymaoWTyGW/4bf6df37f4abce29201556dc103a022a/108x108_gems.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Gemas</p>
+                                </div>
+                                <p>40</p>
+                            </div>
                         </div>
-                        <button class="card-button"></button>
+                        <button class="card-button">CONECTAR</button>
                     </div>
                 </div>
 
@@ -123,13 +157,43 @@
                             </span>
                         </div>
                         <div class="stock">
-                            <div class="item"></div>
-                            <div class="item"></div>
-                            <div class="item"></div>
-                            <div class="item"></div>
-                            <div class="item"></div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/41aBrm8TTeaR7Emm2Tuo07/cf9b89c6c9fe08fe8698c1069d63a595/108x108_elite_pass.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Pase de élite</p>
+                                </div>
+                                <p>1</p>
+                            </div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/1KbXI5XZbMEOk6IQtA9BUH/f26f2d39e4cda771eaa136f28995ef15/108x108_high_elite_arcana_orbs.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Orbes del noble dragón juicio arcano</p>
+                                </div>
+                                <p>200</p>
+                            </div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/5CBiGIbl6OjseW2fhIJFKa/b3974bc60d1632f279af246bf6c8736b/108x108_Elite_pass_plus_webstore_black_friday_2023.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Distinción oculta</p>
+                                </div>
+                                <p>20</p>
+                            </div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/OB7R9TiHXHOo2unMNw1LT/8e8e580eeb040e3bde2eaad9f8d511a3/108x108_arcana-elite_pass_plus_webstore_360.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Insignia arcana</p>
+                                </div>
+                                <p>10</p>
+                            </div>
+                            <div class="item">
+                                <div class="item-content">
+                                    <img src="https://images.ctfassets.net/wn7ipiv9ue5v/BDRCnHNl9krEymaoWTyGW/4bf6df37f4abce29201556dc103a022a/108x108_gems.png?q=75&w=48&fm=avif" alt="">
+                                    <p>Gemas</p>
+                                </div>
+                                <p>40</p>
+                            </div>
                         </div>
-                        <button class="card-button"></button>
+                        <button class="card-button">CONECTAR</button>
                     </div>
                 </div>
 
