second section changes

--- a/index.html
+++ b/index.html
@@ -196,9 +196,29 @@
                         <button class="card-button">CONECTAR</button>
                     </div>
                 </div>
+                
 
 
             </div>
-    </div>    
+        </div>
+        <div class="section">
+            <div class="section-header">
+                <h2>OFERTAS ESPECIALES</h2>
+            </div>
+            <div class="section-body">
+                <div class="card fifth-card">
+                    <div class="card-image"></div>
+                    <div class="card-description">
+                        <div class="card-text">
+                            <p class="card-tittle">Solo en la web | Oferta especial</p>
+                            <span class="card-subtitle">
+                                <p>2D 12H</p>
+                                <p>EN STOCK: 1</p>
+                            </span>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>  
 </body>
 </html>
