--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo</title>
+    <title>Dragon City</title>
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/home.css" />
+    
 </head>
 <body>
     <header>
